--- a/slides/index.html
+++ b/slides/index.html
@@ -406,10 +406,7 @@ https://git.realestate.com.au/cbde/awscli-image
  - https://git.realestate.com.au/cbde/kms-simple-docker
 ---
 # Questions and Feedback
-- Raise Issue or PR at [applied-docker](https://git.realestate.com.au/cbde/applied-docker)
-- Docker Training Slack `#docker-training`
-- Team Slack `#cbde`
-- My Slack `@clement.labbe`
+- Raise Issue or PR at [docker-compose-training](https://github.com/diist/docker-compose-training)
 
 <link rel="import" href="docker-compose.html" />
 
