--- a/slides/index.html
+++ b/slides/index.html
@@ -16,6 +16,13 @@ class: center, middle, big
 ...for development and test
 
 ---
+name:introduction
+class: center, middle, big
+
+# **Clem**ent Labbe
+![rea](media/REA.png)
+
+---
 # Agenda
 
 - [Voting App Example](#voting-app-example)
