No questions please

--- a/slides/index.html
+++ b/slides/index.html
@@ -392,7 +392,7 @@ name: try-it-yourself-6
   - Try `docker-compose up`
 
 ---
-# Questions and Feedback
+# The End!
 - Raise Issue or PR at docker-compose-training: https://github.com/diist/docker-compose-training
 
 - We're hiring! http://careers.realestate.com.au
